# youtube-to-autoavsr

./: .gitignore  .sources_no_voiceover.filtered.txt  README.md  TEAM_SETUP.md  colab.ipynb  pyproject.toml  requirements.txt  sources.txt  sources_no_voiceover.txt  sources_voiceover.txt
configs/: 1080p.yaml  default.yaml  retinaface.yaml
scripts/: install_terminal_command.sh  run.sh  setup_once.sh
src/youtube_to_autoavsr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/yt2avsr/: active_speaker.py  auto_avsr_crop.py  cli.py  cloud.py  config.py  downloader.py  manifest.py  media.py  pipeline.py  profiles.py  scenes.py  segment.py  state.py  subtitles.py  talknet_backend.py  transcribe.py  utils.py  visual_quality.py
tests/: test_auto_avsr_crop.py  test_config.py  test_segment.py
