[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-to-autoavsr"
version = "0.7.0"
description = "Prepare permitted YouTube videos for Auto-AVSR-style training pipelines."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "Apache-2.0"}
dependencies = [
  "typer>=0.12,<1",
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
  "yt-dlp>=2025.1.15",
  "faster-whisper>=1.1,<2",
  "opencv-python>=4.10,<5",
  "mediapipe==0.10.14",
  # mediapipe 0.10.x'in solutions modülü protobuf 5 ile bozuluyor; <5'e sabitle.
  "protobuf>=3.20,<5",
  "numpy>=1.26,<3",
  "tqdm>=4.66,<5",
  "webvtt-py>=0.5,<1",
  "huggingface-hub>=0.24,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.9,<1"]

[project.scripts]
yt2avsr = "yt2avsr.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
